glib: Add 2.48 availibity macros

https://bugzilla.gnome.org/show_bug.cgi?id=755766